# envdataprep

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  environment.yml  pyproject.toml
envdataprep/: __init__.py
envdataprep/core/: __init__.py  conversions.py  netcdf.py  parallel.py
envdataprep/core/datasets/: __init__.py
envdataprep/core/datasets/satellites/: __init__.py  gems.py  tempo.py  tropomi.py
envdataprep/core/grib2/: __init__.py
envdataprep/core/io/: __init__.py  netcdf.py
envdataprep/core/netcdf/: __init__.py  read.py  reshape.py  spatial.py  subset.py  write.py
envdataprep/core/tiff/: __init__.py
envdataprep/dummy_data/: __init__.py  netcdf.py
envdataprep/sample_data/: __init__.py  netcdf.py
envdataprep/utils/: constants.py  decorators.py  io.py  parallel.py  warnings.py
examples/: edp_functions.ipynb  nc_subset.py  subset_netcdf.py  subset_tropomi.py
examples/scripts/: nc_subset.py
scripts/: subset_tropomi_no2.py  subset_tropomi_no2_batch.py  test_installation.py
