[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envdataprep"
version = "0.1.0"
description = "Extensible Environmental Data Preprocessing Framework"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Gongda Lu", email = "gongda.lu@outlook.com"},
]
keywords = [
    "environmental",
    "data",
    "preprocessing",
    "satellites",
    "models",
    "renalysis",
    "forecasts",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Environmental Science",
]

[project.urls]
Homepage = "https://github.com/envmini/envdataprep"
Documentation = "https://envdataprep.readthedocs.io"
Repository = "https://github.com/envmini/envdataprep"
Issues = "https://github.com/envmini/envdataprep/issues"

[tool.setuptools.packages.find]
include = ["envdataprep*"]
exclude = ["scratch*", "tests*"]
