[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envdataprep"
version = "0.1.0"
description = "Extensible Environmental Data Preprocessing Framework"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Gongda Lu", email = "gongda.lu@outlook.com"},
]
dependencies = [
    "netCDF4>=1.6.0",
    "xarray>=2023.1.0", 
    "numpy>=1.24.0",
]
keywords = [
    "environmental",
    "data",
    "preprocessing",
    "satellites",
    "models",
    "renalysis",
    "forecasts",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Environmental Science",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
]
parallel = [
    "tqdm>=4.64.0",
]

# [project.urls]
# Homepage = "https://github.com/envmini/envdataprep"
# Documentation = "https://envdataprep.readthedocs.io"
# Repository = "https://github.com/envmini/envdataprep"
# Issues = "https://github.com/envmini/envdataprep/issues"

[tool.setuptools.packages.find]
include = ["envdataprep*"]
exclude = ["scratch*", "tests*"]
